--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <div class="parent">
           <div class="hero-content">
               <p class="hero-para-title">EMPOWERING LIFELONG LEARNING</p>
+              <p> HELLO WORLD</p>
+        
               <h1 class="hero-heading">
                   Unlock Your Potential<br> with Thapa EduHub
               </h1>
